2006-07-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator_nd.cpp, itpp/comm/modulator.h,
	itpp/base/newton_search.cpp: Minor cleanup fixes of warnings
	detected under MSVC++ .NET compiler.

2006-07-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/newton_search.cpp: Logical variables initialised with
	`true or `false' instead of inteager numbers.

	* itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h: Fixed a minor
	problem with duplicated declaration of tgamma(), lgamma() and
	cbrt() functions.

2006-07-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/Makefile.am: Fixed a bug that caused multiple definition
	errors during linking the IT++ debugging library. 

	* configure.ac: Fixed a minor problem with using AC_DISABLE_SHARED
	macro for Windows environments. 

	* **/*.{h,cpp}: Copyright date updated to `1995-2006'.

	* configure.ac: Version numbers and Copyright date updated.

==============================================================================

2006-07-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.3 released (SVN tag: release-3-10-3)

	* NEWS: Updated to reflect recent fixes.

	* configure.ac: Increased itpp-external version number to 2.3.0.

2006-07-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/eigen_test.cpp: Fixed bug [1516976] by setting the
	threshold of round_to_zero() function to 1e-13. Thanks to Rosario
	for reporting this bug.

2006-06-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, Makefile.am, itpp/Makefile.am, itpp/sources.mk,
	tests/Makefile.am, doc/local/installation.doc, INSTALL, TODO:
	Modularisation of the IT++ library implemented. It is now possible
	to skip the building of various modules using a set of
	`--disable-*' switches with the configure script. The
	documentation has been updated accordingly.

2006-06-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/convcode.h, itpp/comm/convcode.cpp: Fixed bug