@@ -1,5 +1,12 @@
 2006-07-17  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* itpp/base/itassert.cpp: Conversion from integer to std::string
+	implemented in pure C++ by using std::stringstream class (merged
+	rev. 536:538 from itpp-3-10 branch).
+
+	* itpp/base/itfile.h: Fixed a minor problem with overloaded virtual
+	function open() (merged	rev. 536:538 from itpp-3-10 branch).
+
 	* itpp/comm/modulator_nd.cpp, itpp/comm/modulator.h,
 	itpp/base/newton_search.cpp: Minor cleanup fixes of warnings
 	detected under MSVC++ .NET compiler.
